[package]
name = "hello_srf05"
version = "0.1.0"
edition.workspace = true

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
panic-halt.workspace = true
rtt-target = { workspace = true, features = ["cortex-m"]  }
stm32h7xx-hal = { workspace = true, features = ["rt", "stm32h7b3"] }
